mais alguns comandos

--- a/atividade2/.vscode/settings.json
+++ b/atividade2/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "files.associations": {
     "*.css": "tailwindcss",
-    "stdlib.h": "c"
+    "stdlib.h": "c",
+    "interface.h": "c"
   }
 }
