--- a/atividade2/Makefile
+++ b/atividade2/Makefile
@@ -10,6 +10,7 @@ c:
 	gcc -g -c core/modules/commands/mkdir/mkdir.c
 	gcc -g -c core/modules/commands/rm/rm.c
 	gcc -g -c core/modules/commands/cp/cp.c
+	gcc -g -c core/modules/commands/mv/mv.c
 	gcc -g -c main.c
 	gcc -o main *.o -lm
 r:
